Fixed padding error and to small on mobile

--- a/src/assets/css/main/photos-mobile.css
+++ b/src/assets/css/main/photos-mobile.css
@@ -8,5 +8,9 @@
       width: 100%;
       height: 60vh;
     }
+
+    .centered-sm-ctr img {
+    width: 75%;
+  }
   }
 }
