--- a/src/assets/css/main/photos.css
+++ b/src/assets/css/main/photos.css
@@ -19,6 +19,7 @@
 
   .centered-sm-ctr img {
     width: 30%;
+    padding-bottom: 20px;
   }
 
 
